--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <p class="link"><a href="#head">Download Excursion (Coming soon!)</a></p>
       </nav>
     </div>
+    <div id="media">
+      <video control autoplay>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+      </video>
+    </div>
     <h1>
   </body>
 </html>
