--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
         <p class="link"><a href="#head">Download Excursion (Coming soon!)</a></p>
       </nav>
     </div>
-    <div id="media">
+    <div id="topmedia">
       <video control autoplay>
         <source src="./resources/videos/excursion.mp4" type="video/mp4">
+          Your browser does not support this video tag
       </video>
     </div>
-    <h1>
+    <div id="body">
+      <p class="body1">Your personal travel guide</p>
+      <p class="body2">Excursion remembers places you like, and recommends new points of interest
+        around you.</p>
+    </div>
   </body>
 </html>
