Add LowMedia to index.html

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
       <p class="body2">Excursion remembers places you like, and recommends new points of interest
         around you.</p>
     </div>
+    <div id="lowmedia">
+      <img src="./resources/images/camp.jpg" />
+      <br />
+      <br />
+      <img src="./resources/images/phone.png" />
+    </div>
   </body>
 </html>
