Add footer text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </nav>
     </div>
     <div id="topmedia">
-      <video control autoplay>
+      <video control autoplay loop>
         <source src="./resources/videos/excursion.mp4" type="video/mp4">
           Your browser does not support this video tag
       </video>
@@ -27,6 +27,11 @@
       <br />
       <br />
       <img src="./resources/images/phone.png" />
+    </div>
+    <div id="foot">
+      <p class="body1">Coming Soon for iPhone and Android</p>
+      <p class="link"><a href="#head">Download Excursion (Coming soon!)</a></p>
+      <p class="copyright">© Excursion</p>
     </div>
   </body>
 </html>
